--- a/project_models.ipynb
+++ b/project_models.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        " 'two_up_inverted']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1092,80 +1092,87 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "path_to_save = 'savedGrayDataset'\n",
-    "\n",
-    "tf.data.experimental.save(train_ds, path_to_save + '/train')\n",
-    "tf.data.experimental.save(val_ds, path_to_save + '/val')\n",
-    "tf.data.experimental.save(test_ds, path_to_save + '/test')"
+    "### **Dataset: Shallow Grayscale - Save**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_save = 'savedDatasetShallowGrayscale'\n",
+    "\n",
+    "tf.data.experimental.save(train_ds_grayscale, path_to_save + '/train')\n",
+    "tf.data.experimental.save(val_ds_grayscale, path_to_save + '/val')\n",
+    "tf.data.experimental.save(test_ds_grayscale, path_to_save + '/test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_4\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " rescaling_3 (Rescaling)     (None, 64, 64, 1)         0         \n",
+      " rescaling_1 (Rescaling)     (None, 64, 64, 1)         0         \n",
       "                                                                 \n",
-      " conv2d_11 (Conv2D)          (None, 64, 64, 32)        320       \n",
+      " conv2d_4 (Conv2D)           (None, 64, 64, 32)        320       \n",
       "                                                                 \n",
-      " batch_normalization_11 (Bat  (None, 64, 64, 32)       128       \n",
-      " chNormalization)                                                \n",
+      " batch_normalization_4 (Batc  (None, 64, 64, 32)       128       \n",
+      " hNormalization)                                                 \n",
       "                                                                 \n",
-      " max_pooling2d_11 (MaxPoolin  (None, 32, 32, 32)       0         \n",
-      " g2D)                                                            \n",
+      " max_pooling2d_4 (MaxPooling  (None, 32, 32, 32)       0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " dropout_13 (Dropout)        (None, 32, 32, 32)        0         \n",
+      " dropout_4 (Dropout)         (None, 32, 32, 32)        0         \n",
       "                                                                 \n",
-      " conv2d_12 (Conv2D)          (None, 32, 32, 64)        18496     \n",
+      " conv2d_5 (Conv2D)           (None, 32, 32, 64)        18496     \n",
       "                                                                 \n",
-      " batch_normalization_12 (Bat  (None, 32, 32, 64)       256       \n",
-      " chNormalization)                                                \n",
+      " batch_normalization_5 (Batc  (None, 32, 32, 64)       256       \n",
+      " hNormalization)                                                 \n",
       "                                                                 \n",
-      " max_pooling2d_12 (MaxPoolin  (None, 16, 16, 64)       0         \n",
-      " g2D)                                                            \n",
+      " max_pooling2d_5 (MaxPooling  (None, 16, 16, 64)       0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " dropout_14 (Dropout)        (None, 16, 16, 64)        0         \n",
+      " dropout_5 (Dropout)         (None, 16, 16, 64)        0         \n",
       "                                                                 \n",
-      " conv2d_13 (Conv2D)          (None, 16, 16, 128)       73856     \n",
+      " conv2d_6 (Conv2D)           (None, 16, 16, 128)       73856     \n",
       "                                                                 \n",
-      " batch_normalization_13 (Bat  (None, 16, 16, 128)      512       \n",
-      " chNormalization)                                                \n",
+      " batch_normalization_6 (Batc  (None, 16, 16, 128)      512       \n",
+      " hNormalization)                                                 \n",
       "                                                                 \n",
-      " max_pooling2d_13 (MaxPoolin  (None, 8, 8, 128)        0         \n",
-      " g2D)                                                            \n",
+      " max_pooling2d_6 (MaxPooling  (None, 8, 8, 128)        0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " dropout_15 (Dropout)        (None, 8, 8, 128)         0         \n",
+      " dropout_6 (Dropout)         (None, 8, 8, 128)         0         \n",
       "                                                                 \n",
-      " conv2d_14 (Conv2D)          (None, 8, 8, 256)         295168    \n",
+      " conv2d_7 (Conv2D)           (None, 8, 8, 256)         295168    \n",
       "                                                                 \n",
-      " batch_normalization_14 (Bat  (None, 8, 8, 256)        1024      \n",
-      " chNormalization)                                                \n",
+      " batch_normalization_7 (Batc  (None, 8, 8, 256)        1024      \n",
+      " hNormalization)                                                 \n",
       "                                                                 \n",
-      " max_pooling2d_14 (MaxPoolin  (None, 4, 4, 256)        0         \n",
-      " g2D)                                                            \n",
+      " max_pooling2d_7 (MaxPooling  (None, 4, 4, 256)        0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " dropout_16 (Dropout)        (None, 4, 4, 256)         0         \n",
+      " dropout_7 (Dropout)         (None, 4, 4, 256)         0         \n",
       "                                                                 \n",
-      " dense_5 (Dense)             (None, 4, 4, 256)         65792     \n",
+      " dense (Dense)               (None, 4, 4, 256)         65792     \n",
       "                                                                 \n",
-      " dropout_17 (Dropout)        (None, 4, 4, 256)         0         \n",
+      " dropout_8 (Dropout)         (None, 4, 4, 256)         0         \n",
       "                                                                 \n",
-      " flatten_3 (Flatten)         (None, 4096)              0         \n",
+      " flatten (Flatten)           (None, 4096)              0         \n",
       "                                                                 \n",
-      " dense_6 (Dense)             (None, 18)                73746     \n",
+      " dense_1 (Dense)             (None, 18)                73746     \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 529,298\n",
@@ -1242,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1252,43 +1259,43 @@
       "\n",
       "Epoch 1: LearningRateScheduler setting learning rate to 0.0010000000474974513.\n",
       "Epoch 1/10\n",
-      "2754/2754 [==============================] - 118s 24ms/step - loss: 3.3789 - accuracy: 0.3286 - val_loss: 1.8594 - val_accuracy: 0.5202 - lr: 0.0010\n",
+      "2754/2754 [==============================] - 41s 12ms/step - loss: 3.3797 - accuracy: 0.3397 - val_loss: 2.1470 - val_accuracy: 0.4335 - lr: 0.0010\n",
       "\n",
       "Epoch 2: LearningRateScheduler setting learning rate to 0.0009900990569281696.\n",
       "Epoch 2/10\n",
-      "2754/2754 [==============================] - 31s 11ms/step - loss: 1.6744 - accuracy: 0.5744 - val_loss: 1.5798 - val_accuracy: 0.6136 - lr: 9.9010e-04\n",
+      "2754/2754 [==============================] - 32s 12ms/step - loss: 1.6326 - accuracy: 0.5875 - val_loss: 1.7628 - val_accuracy: 0.5624 - lr: 9.9010e-04\n",
       "\n",
       "Epoch 3: LearningRateScheduler setting learning rate to 0.0009706853341092082.\n",
       "Epoch 3/10\n",
-      "2754/2754 [==============================] - 32s 11ms/step - loss: 1.4207 - accuracy: 0.6538 - val_loss: 1.6168 - val_accuracy: 0.5993 - lr: 9.7069e-04\n",
+      "2754/2754 [==============================] - 32s 12ms/step - loss: 1.3771 - accuracy: 0.6676 - val_loss: 1.6830 - val_accuracy: 0.5942 - lr: 9.7069e-04\n",
       "\n",
       "Epoch 4: LearningRateScheduler setting learning rate to 0.0009424129424128428.\n",
       "Epoch 4/10\n",
-      "2754/2754 [==============================] - 31s 11ms/step - loss: 1.2892 - accuracy: 0.6940 - val_loss: 1.1943 - val_accuracy: 0.7361 - lr: 9.4241e-04\n",
+      "2754/2754 [==============================] - 32s 12ms/step - loss: 1.2392 - accuracy: 0.7074 - val_loss: 1.3762 - val_accuracy: 0.6762 - lr: 9.4241e-04\n",
       "\n",
       "Epoch 5: LearningRateScheduler setting learning rate to 0.0009061662869778676.\n",
       "Epoch 5/10\n",
-      "2754/2754 [==============================] - 30s 11ms/step - loss: 1.1966 - accuracy: 0.7220 - val_loss: 1.0872 - val_accuracy: 0.7631 - lr: 9.0617e-04\n",
+      "2754/2754 [==============================] - 32s 12ms/step - loss: 1.1405 - accuracy: 0.7361 - val_loss: 1.1008 - val_accuracy: 0.7539 - lr: 9.0617e-04\n",
       "\n",
       "Epoch 6: LearningRateScheduler setting learning rate to 0.0008630154964824517.\n",
       "Epoch 6/10\n",
-      "2754/2754 [==============================] - 30s 11ms/step - loss: 1.1178 - accuracy: 0.7452 - val_loss: 1.0516 - val_accuracy: 0.7749 - lr: 8.6302e-04\n",
+      "2754/2754 [==============================] - 32s 12ms/step - loss: 1.0732 - accuracy: 0.7531 - val_loss: 1.0083 - val_accuracy: 0.7823 - lr: 8.6302e-04\n",
       "\n",
       "Epoch 7: LearningRateScheduler setting learning rate to 0.0008141655444149982.\n",
       "Epoch 7/10\n",
-      "2754/2754 [==============================] - 30s 11ms/step - loss: 1.0507 - accuracy: 0.7624 - val_loss: 0.9404 - val_accuracy: 0.8016 - lr: 8.1417e-04\n",
+      "2754/2754 [==============================] - 32s 12ms/step - loss: 1.0038 - accuracy: 0.7726 - val_loss: 0.9798 - val_accuracy: 0.7847 - lr: 8.1417e-04\n",
       "\n",
       "Epoch 8: LearningRateScheduler setting learning rate to 0.000760902402591761.\n",
       "Epoch 8/10\n",
-      "2754/2754 [==============================] - 31s 11ms/step - loss: 1.0007 - accuracy: 0.7750 - val_loss: 1.0152 - val_accuracy: 0.7810 - lr: 7.6090e-04\n",
+      "2754/2754 [==============================] - 32s 12ms/step - loss: 0.9488 - accuracy: 0.7845 - val_loss: 0.9620 - val_accuracy: 0.7976 - lr: 7.6090e-04\n",
       "\n",
       "Epoch 9: LearningRateScheduler setting learning rate to 0.0007045392757626595.\n",
       "Epoch 9/10\n",
-      "2754/2754 [==============================] - 30s 11ms/step - loss: 0.9437 - accuracy: 0.7898 - val_loss: 0.9708 - val_accuracy: 0.7804 - lr: 7.0454e-04\n",
+      "2754/2754 [==============================] - 32s 12ms/step - loss: 0.9009 - accuracy: 0.7969 - val_loss: 0.8396 - val_accuracy: 0.8233 - lr: 7.0454e-04\n",
       "\n",
       "Epoch 10: LearningRateScheduler setting learning rate to 0.0006463663297953135.\n",
       "Epoch 10/10\n",
-      "2754/2754 [==============================] - 31s 11ms/step - loss: 0.8973 - accuracy: 0.7999 - val_loss: 1.0323 - val_accuracy: 0.7645 - lr: 6.4637e-04\n"
+      "2754/2754 [==============================] - 32s 12ms/step - loss: 0.8549 - accuracy: 0.8062 - val_loss: 0.8940 - val_accuracy: 0.8028 - lr: 6.4637e-04\n"
      ]
     }
    ],
@@ -1311,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,6 +1335,15 @@
     "# Save Model: .h5\n",
     "# Saves the Model Weights and Configurations\n",
     "scratch_model_shallow_grayscale.save('h5/scratch_model_shallow_grayscale.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "---"
    ]
   }
  ],
